# scoresvr

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yaml  compose.yaml  pyproject.toml  requirements.txt  run-mypy  scoreserver.yaml  scoresvr.yaml
app/: main.py
app/templates/: index.html
data/: engraving.schema.json  import.py  ingest  score.schema.json  scores2json.py
manifests/: ingress.yaml  mongodb-nodeport-svc.yaml  mongodb-pv.yaml  mongodb-pvc.yaml  mongodb-ss.yaml  mongodb-sts.yaml  mongodb-svc.yaml  scoreserver-deployment.yaml  scoreserver.yaml  scoresvr-nginx-configmap.yaml  service.yaml
src/app/: main.py
templates/: index.html
web/: Dockerfile  Dockerfile.nginx  scoresvr-httpd.conf  scoresvr-nginx.conf
