[tool.poetry]
name = "scoresvr"
version = "0.2.1"
description = "Webapp to display musical scores"
authors = ["Marc Patton <pattonmj8503@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.1"
gunicorn = "^20.1.0"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
